# codefiles

./: .gitignore  LICENSE  README.md  bash_help.txt
autohotkey/: KJG_Help.ahk  QuietMouse.ahk  SC_ESP-POR.ahk  SC_GER.ahk  SC_help.ahk  gw_help.ahk  icon_color_change.ahk  keep_on_top.ahk
c_sandbox/: .gitignore
c_sandbox/hello_c/: hello.c  lib.c  lib.h
c_sandbox/strings_c/: strings.c
c_sandbox/structs_etc/: a.out  main.c
c_sandbox/tmp_c/: hello.c
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
cpp_library_info/: .gitignore
cpp_library_info/about_basics/: basics.cpp
cpp_library_info/about_c_cstdint/: CMakeLists.txt  c_stdint.c
cpp_library_info/about_chrono/: chrono.cpp
cpp_library_info/about_classes/: CMakeLists.txt  classes.cpp
cpp_library_info/about_cmake/: CMakeLists.txt  README.md
cpp_library_info/about_cmake/include/mymath/: mymath.h  platform.h
cpp_library_info/about_cmake/src/: mymath.cpp
cpp_library_info/about_cmake/src/examples/: demo.cpp
cpp_library_info/about_eigen/: CMakeLists.txt  eigen.cpp
cpp_library_info/about_ellipses_threedots/: ellipses.cpp
cpp_library_info/about_filesystem/: CMakeLists.txt  filesystem.cpp
cpp_library_info/about_fstream/: fstream.cpp  tmp.txt
cpp_library_info/about_map/: launch.vs.json  map.cpp
cpp_library_info/about_pointers/: CMakeLists.txt  pointers.cpp
cpp_library_info/about_random/: random.cpp
cpp_library_info/about_string/: CMakeLists.txt  string.cpp
cpp_library_info/about_threading/: threading.cpp
cpp_library_info/about_vector/: vector.cpp
cpp_sandbox/: .gitignore  e_box.cpp
cpp_sandbox/_sandbox/: randomstuff.cpp
cpp_sandbox/args_in_cpp/: a.out  argsin.cpp
cpp_sandbox/arrow_operator/: a.out  arrow.cpp
cpp_sandbox/buffComparison/: main.cpp
cpp_sandbox/class_inheritance_vs_composition/: inherit_vs_comp.cpp
cpp_sandbox/classes_help/: classes_help.cpp
cpp_sandbox/classes_objs/: classes.cpp
cpp_sandbox/cls_parentref/: main.cpp
cpp_sandbox/cmake_eigen/: CMakeLists.txt  cmake_eigen.cpp
cpp_sandbox/cmake_multipleLibs/: CMakeLists.txt  cmake_multiLib.cpp  eigen_with_cmake.cpp
cpp_sandbox/composition_example/: comp_example.cpp
cpp_sandbox/cpp_basics/: basics.cpp
cpp_sandbox/delme/: randomstuff.cpp
cpp_sandbox/delme_e3/: .cproject  .project
cpp_sandbox/eclipse_sandbox/: .cproject  .project
cpp_sandbox/eigen_practice/: eigen_examples.cpp
cpp_sandbox/file_ops/: a.out  code.cpp  code_old1.cpp  config.txt  fileout.txt
cpp_sandbox/functions/: functions_example.cpp
cpp_sandbox/gainput_linuxOnly/: CMakeLists.txt  basicsample_linux.cpp
cpp_sandbox/game_snake/: CMakeLists.txt  snake.cpp
cpp_sandbox/headers_and_libs/: main_one.cpp  norms.cpp  rectangle.h
cpp_sandbox/hello_cmake/: CMakeLists.txt  hicmake.cpp
cpp_sandbox/hello_cv/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  code_cv  code_cv.cpp
cpp_sandbox/hello_eigen/: linux_compile.sh  main.cpp
cpp_sandbox/hello_freeglut/: CMakeLists.txt  main.cpp
cpp_sandbox/hello_phone/: hello_phone.cpp  out
cpp_sandbox/hello_webcam/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  webcam  webcam.cpp
cpp_sandbox/hello_world/: code.cpp  out
cpp_sandbox/hello_wxWidgets/: CMakeLists.txt  hello_wxwidgets.cpp  wx_attempt.cpp
cpp_sandbox/insertion_operator/: main.cpp
cpp_sandbox/libInfo_fileIO/: io_help.h
cpp_sandbox/libInfo_gainput/: CMakeLists.txt  keyinput.cpp
cpp_sandbox/matrices_eigen_with_cmake/: CMakeLists.txt
data/: homer.ini  loader.py  simpsons.ini
javascript/: basics.js
k_thesis/: .gitignore  README.md  kjg_thesis_outline.mm  project_outline.odt  project_outline_test.rtf  proposed_timeline.ods
latex_sandbox/: .gitignore
lib/: .gitignore  delmemaybe_kaudio.py  gui_kimg.ps1  kaudio.py  kimg.py  kimg_old.py  klib.py  kmusic.py  musicmetapath.txt  potentialfix  stopwatch.py
notes/: KJG_python_NOTES.txt  PYTHON_NOTES.txt  bash_and_linux_notes.txt  bash_help_2.txt  bash_notes.txt  command_webcam.sh  cpp_notes.txt  git_notes.txt  js_notes.txt  markdown_md_notes.ipynb  markdown_notes.md  powershell_cmd_NOTES.txt  python_notes.txt  r_notes.txt  ros_notes.txt  rpi_notes.txt  sandbox_md_file_format.ipynb  vim_notes.txt
pull_example/: somefile.txt
py_module_info/: moduleInfo_StdLib.py  moduleInfo_StdLib_classes.py  moduleInfo_argparse.py  moduleInfo_configparser.py  moduleInfo_hashlib.py  moduleInfo_keywords.py  moduleInfo_matplotlib.py  moduleInfo_multiprocessing.py  moduleInfo_numpy.py  moduleInfo_opencv.py  moduleInfo_pandas.py  moduleInfo_pickle.py  moduleInfo_pyqt5.py  moduleInfo_random.py  moduleInfo_tarball_zip.py  moduleInfo_threading.py  moduleInfo_tkinter.py  moduleInfo_tqdm.py  moduleInfo_unittest.py
py_sandbox/: Arr.csv  BACKUP_k.py  EXAMPLE multiple keypresses.py  GenFolderList.py  KJG_NOTES.txt  Logger.py  MULTIPLE_KB_INPUTS_example.py  WeirdPythonConcepts.py  animated_plotting_r1.py  animated_plotting_r2.py  area_of_sphere.py  arg_testing.py  argparse_module.py  args_as_flags.py  assert_help.py  auto-sync.py  bisection_method.py  buffer_class.py  cam2ros.py  class_inheritance.py  classes_and_objects.py  clear_copies.py  config_runtime.py  cpu_rpiSerial.py  decorators_classfunctions.py  delme.py  detectOrangeCone.py  dict_example.py  fontTest.py  function_as_argument.py  get_primes.py  global_refresher.py  hello_world.py  hots_speeds.txt  idea_cpu_rpiSerial.py  idea_dice_advantage_significance.py  idea_ipscan.py  idea_logistic_curve_fit.py  idea_multitimer.py  idea_projectile.py  (+64 more)
r_sandbox/: basics.r  classes_and_objects.r
ros_sandbox/: README.txt
scripts_libs/: k.py  kimg.py  klib.py
setup_help/: Microsoft.PowerShell_profile.ps1  backup_install_help.txt  bashrc_repo  git_notes.txt  k_setup.sh  pycharm_help.txt  python_requirements.txt  setup_linux.sh  setup_rpi02w.sh  setup_termux.sh  vimrc_remote
sh_sandbox_bash/: .beginner_notes.sh.swp  beginner_notes.sh  exit_status.sh
temp_dnd/: background_final.txt  tarron_relationships.txt
tmp/: fpga-help.docx  fpga-help.odt  rec241226T132900_rotate360_micromouse.csv
(+683 files in other folders)
